--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>I am sober</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="greeting-message">
-    <p class="greeting-primary">Przede wszystkim gratulacje</p>
-    <p class="greeting secondary">Właśnie zrobiłeś duży skok ku trzeźwości.</p>
+  <header>
+    <div class="greeting-message">
+      
+      <p class="greeting-primary">Przede wszystkim gratulacje!</p>
+      <p class="greeting-secondary">Właśnie zrobiłeś duży skok ku trzeźwości.</p>
+
+  </header>
   </div>
 </body>
 </html>
