add section to index.html

--- a/index.html
+++ b/index.html
@@ -12,8 +12,17 @@
       
       <p class="greeting-primary">Przede wszystkim gratulacje!</p>
       <p class="greeting-secondary">Właśnie zrobiłeś duży skok ku trzeźwości.</p>
-
+      
+    </div>
   </header>
-  </div>
+  <section>
+    <p>Od czego pozostajesz wolny/a?</p>
+    <select id="addiction-type">
+      <option value="alcohol">Alkohol</option>
+      <option value="drugs">Narkotyki</option>
+      <option value="pornography">Pornografia</option>
+    </select>
+  </section>
+  
 </body>
 </html>
