--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
   <section>
     <p>Od czego pozostajesz wolny/a?</p>
     <select id="addiction-type">
+      <option value="" disabled selected>Wybierz opcję poniżej</option>
       <option value="alcohol">Alkohol</option>
       <option value="drugs">Narkotyki</option>
       <option value="pornography">Pornografia</option>
     </select>
   </section>
-  
+  <script src="main.js"></script>
 </body>
 </html>
