set deafauld addiction date to input in main.js

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
       <option value="pornography">Pornografia</option>
     </select>
   </section>
+  <section>
+    <p>Wybierz datę uwolnienia się od uzależnienia</p>
+    <input type="date" id="addiction-free" value="">
+  </section>
   <script src="main.js"></script>
 </body>
 </html>
