--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>I am sober</title>
-		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" href="css/index.css" />
 	</head>
 	<body>
 		<header>
@@ -33,6 +33,6 @@
 				<button type="submit">Następne</button>
 			</section>
 		</form>
-		<script src="main.js"></script>
+		<script src="js/index.js"></script>
 	</body>
 </html>
