--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -7,8 +7,7 @@
 </head>
 <body>
   <h1>Podsumowanie</h1>
-  <script>
-    console.log(localStorage.getItem('userData'))
-  </script>
+  <h2>Jakiś tekst</h2>
+  <script src="../js/dashboard.js"></script>
 </body>
 </html>
