Add date to dasboard.js

--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -7,7 +7,11 @@
 </head>
 <body>
   <h1>Podsumowanie</h1>
-  <h2>Jakiś tekst</h2>
+  <section class="userData">
+    <p class="addiction-type"><span></span>: Jestem wolny/a już przez</p>
+    <p class="addiction-date">Data rozpoczęcia trzeźwienia: <span></span></p>
+    <p class="number-of-days"></p>
+  </section>
   <script src="../js/dashboard.js"></script>
 </body>
 </html>
