--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			</section>
 			<section>
 				<p>Wybierz datę uwolnienia się od uzależnienia</p>
-				<input type="date" id="addiction-free" required />
+				<input type="datetime-local" id="addiction-free" required />
 				<p>Ile pieniędzy dziennie traciłeś na uzależnienie?</p>
 				<input type="number" min="0" id="addiction-cost" required/><span>PLN</span>
 				<button type="submit">Następne</button>
